# cukerust

./: .gitattributes  .gitignore  CHANGELOG.md  GLOBAL_TODO.md  LICENSE-MIT  PUBLISH_BLOCKERS.md  README.md  RELEASE_BLOCKERS.md  TODO.md
 .specs/: 00_cukerust.md
.docs/: 00_end_goal.md  01_hybrid_ts_rust_vscode_extension.md  02_testing_vscode_extensions.md  03_monorepo_ts_rust_structure.md  04_workspace_packages_crates_plan.md  05_all_testing requirements.md  MONKEY_TESTING_GUIDE.md
.docs/DONE/: TODO-0.md  TODO-1.md
.docs/UX/: README.md  communication.md  features.md  highlighting.md  interaction-layer.md  open-questions.md  roadmap.md  user-journeys.md
.github/workflows/: ci.yml
.specs/: 01_rust_bdd_tdd.md
examples/: cukerust-showcase.code-workspace
extension/: .eslintrc.json  .gitignore  CHANGELOG.md  LICENSE  LICENSE-APACHE  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
extension/src/: commands.ts  extension.ts  gherkin.ts  indexer.ts  providers.ts  run_matrix.ts  semantics.ts  types.ts  utils.ts
rust/: Cargo.toml
rust/crates/cukerust_core/: Cargo.toml  TODO.md
rust/crates/cukerust_core/features/parsing/: ambiguity.feature  attributes.feature  attributes_edges.feature  builder_chains.feature  builder_edges.feature  false_positives.feature  macros.feature  macros_edges.feature  multifile_ordering.feature  raw_strings.feature  raw_strings_edges.feature  stats_semantics.feature
rust/crates/cukerust_core/src/: lib.rs  step_index.rs
rust/crates/cukerust_core/tests/: bdd.rs
rust/crates/cukerust_core/tests/steps/: parsing.rs
rust/crates/cukerust_wasm/: Cargo.toml  TODO.md
rust/crates/cukerust_wasm/src/: lib.rs
rust/crates/cukerust_wasm/tests/: invalid.rs  json.rs
scripts/: open-showcase.sh
(+29 files in other folders)
