[package]
name = "cukerust_core"
version = "0.1.0"
edition = "2021"

author = ""
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
once_cell = "1"

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[test]]
name = "bdd"
path = "tests/bdd.rs"
harness = false
